--- a/public/contact.css
+++ b/public/contact.css
@@ -131,8 +131,7 @@ textarea:focus {
   outline: none;
 }
 .wrapper {
-  width: 35%;
-  max-width: 32rem;
+  width: 35rem;
   background-color: white;
 }
 .letter {
@@ -140,7 +139,7 @@ textarea:focus {
   left: 0;
   right: 0;
   top: 0;
-  width: 100%;
+  width: 30rem;
   margin: auto;
   perspective: 60rem;
 }
@@ -168,8 +167,7 @@ textarea:focus {
   margin: auto;
 }
 .envelope.front {
-  width: 60%;
-  max-width: 12rem;
+  width: 10rem;
   height: 6rem;
   border-radius: 0 0 1rem 1rem;
   overflow: hidden;
@@ -194,8 +192,7 @@ textarea:focus {
 }
 .envelope.back {
   top: -4rem;
-  width: 60%;
-  max-width: 10rem;
+  width: 10rem;
   height: 10rem;
   overflow: hidden;
   z-index: -9998;
@@ -280,6 +277,7 @@ textarea:focus {
 }
 
 
+
 footer {
     background-color: #333;
     color: #fff;
@@ -294,6 +292,87 @@ footer {
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
 * {
   box-sizing: border-box;
+}
+.wrapper {
+  width: 35%;
+  max-width: 32rem;
+  background-color: white;
+}
+.letter {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  width: 100%;
+  margin: auto;
+  perspective: 60rem;
+}
+.side {
+  height: 12rem;
+  background-color: #fcfcf8;
+  outline: 1px solid transparent;
+  &:nth-of-type(1) {
+    padding: 2rem 2rem 0;
+    border-radius: 1rem 1rem 0 0;
+    box-shadow: inset 0 0.75rem 2rem rgba(229, 225, 187, 0.5);
+  }
+  &.side:nth-of-type(2) {
+    padding: 2rem;
+    border-radius: 0 0 1rem 1rem;
+    box-shadow: 0 0.3rem 0.3rem rgba(0, 0, 0, 0.05), inset 0 -0.57rem 2rem rgba(229, 225, 187, 0.5);
+    text-align: right;
+  }
+}
+.envelope {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  margin: auto;
+}
+.envelope.front {
+  width: 60%;
+  max-width: 12rem;
+  height: 6rem;
+  border-radius: 0 0 1rem 1rem;
+  overflow: hidden;
+  z-index: 9999;
+  opacity: 0;
+}
+.envelope.front::before, .envelope.front::after {
+  position: absolute;
+  display: block;
+  width: 12rem;
+  height: 6rem;
+  background-color: #e9dc9d;
+  transform: rotate(30deg);
+  transform-origin: 0 0;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+  content: '';
+}
+.envelope.front::after{
+  right: 0;
+  transform: rotate(-30deg);
+  transform-origin: 100% 0;
+}
+.envelope.back {
+  top: -4rem;
+  width: 60%;
+  max-width: 10rem;
+  height: 10rem;
+  overflow: hidden;
+  z-index: -9998;
+  opacity: 0;
+  transform: translateY(-6rem);
+  &::before {
+    display: block;
+    width: 10rem;
+    height: 10rem;
+    background-color: #e9dc9d;
+    border-radius: 1rem;
+    content: '';
+    transform: scaleY(0.6) rotate(45deg)
+  }
 }
 body {
   margin: 0;
