--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,15 @@ body {
     font-weight: 300;
   background-image: linear-gradient( 135deg, #2AFADF 10%, #4C83FF 100%);
 }
-
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 2px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
 ul {
     list-style: none;
     padding: 0;
@@ -209,8 +217,7 @@ header nav ul li:hover a {
     right: 0;
     width: 100%;
     height: 100%;
-    color: #666;
-    font-size: 18px;
+    /*color: #666;*/
     text-align: center;
     box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
@@ -218,7 +225,7 @@ header nav ul li:hover a {
 }
 
 .front {
-   background-image: linear-gradient( 135deg, #CE9FFC 10%, #7367F0 100%);
+   background: linear-gradient( 135deg, #CE9FFC 10%, #7367F0 100%);
 }
 
 .front.active {
@@ -228,7 +235,7 @@ header nav ul li:hover a {
 }
 
 .back {
-   background-image: linear-gradient( 135deg, #FEB692 10%, #EA5455 100%);
+   background: linear-gradient( 135deg, #FEB692 10%, #EA5455 100%);
 }
 
 .back:not(.active) {
@@ -256,7 +263,7 @@ header nav ul li:hover a {
 }
 
 .right {
-    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
+    background: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
 }
 
 .right:not(.active) {
