--- a/unusable/timeline.css
+++ b/unusable/timeline.css
@@ -4,7 +4,12 @@ body {
     font-size: 16px;
     line-height: 1.75;
   }
-  
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
   #timeline {
     display: flex;
     background-color: #031625;
