--- a/public/aboutus.css
+++ b/public/aboutus.css
@@ -37,4 +37,41 @@
         transform: translateX(0);
     }
 }
+.profile-card {
+    width: 250px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    padding: 20px;
+    margin: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    vertical-align: top;
+  }
+
+  .profile-picture {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto 15px;
+    display: block;
+  }
+
+  .profile-name {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    text-align: center;
+  }
+
+  .profile-job {
+    font-size: 16px;
+    color: #777;
+    text-align: center;
+  }
+  .profile-container
+  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
