--- a/public/timeline.css
+++ b/public/timeline.css
@@ -98,7 +98,7 @@ body {
         sans-serif;
       text-transform: uppercase;
       color: #1779cf;
-      font-size: 1.44rem;
+      font-size: 0.85rem;
       font-weight: normal;
     }
   }
@@ -111,12 +111,12 @@ body {
     z-index: 1;
     border-top: 1px solid #fff;
     border-bottom: 1px solid #fff;
-  
+    word-wrap: break-word;
     p {
       font-family: "Pathway Gothic One", Helvetica Neue, Helvetica, Arial,
         sans-serif;
       font-size: 1.728rem;
-      line-height: 0;
+      word-wrap: break-word;
     }
   }
   
