--- a/public/aboutus.css
+++ b/public/aboutus.css
@@ -37,15 +37,19 @@
         transform: translateX(0);
     }
 }
-.profile-card {
+.profile-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .profile-card {
     width: 250px;
     background-color: #f9f9f9;
     border-radius: 8px;
     padding: 20px;
     margin: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: inline-block;
-    vertical-align: top;
   }
 
   .profile-picture {
@@ -68,10 +72,6 @@
     color: #777;
     text-align: center;
   }
-  .profile-container
-  {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+
+
 
