--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -273,101 +273,45 @@
   -moz-transform: rotateX(-90deg);
   transform: rotateX(-90deg);
 }
-/*New flipcard*/
-.flip-card {
-  background-color: transparent;
-  width: 200px;
-  height: 200px;
-  perspective: 1000px;
-  display: inline-block;
-  margin: 10px;
-}
 
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-}
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
-.flip-card-back {
-  background-color: #555;
-  color: white;
-  transform: rotateY(180deg);
-}
-
-
-.flip-card-content {
-  padding: 20px;
-  text-align: center;
-  font-size: 16px;
-}
 *::after, *::before {
   box-sizing: border-box;
 }
 
-.modal {
+.modal-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
+  opacity: 0;
+  pointer-events: none;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0);
-  transition: 200ms ease-in-out;
-  border: 1px solid black;
   border-radius: 10px;
   z-index: 10;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.3);
   width: 500px;
   max-width: 80%;
 }
+.modal{
+  background-color: #fff;
+  width: 600px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  max-width: 100%;
+  padding: 30px 50px;
+  border-radius: 5px;
 
-.modal.active {
-  transform: translate(-50%, -50%) scale(1);
 }
 
-.modal-header {
-  padding: 10px 15px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid black;
+.modal-container.show {
+  opacity: 1;
+  pointer-events: auto;
 }
 
-.modal-header .title {
-  font-size: 1.25rem;
-  font-weight: bold;
-}
 
-.modal-header .close-button {
-  cursor: pointer;
-  border: none;
-  outline: none;
-  background: none;
-  font-size: 1.25rem;
-  font-weight: bold;
-}
 
-.modal-body {
-  padding: 10px 15px;
-}
-
-#overlay {
+/* #overlay {
   position: fixed;
   opacity: 0;
   transition: 200ms ease-in-out;
@@ -382,8 +326,7 @@
 #overlay.active {
   opacity: 1;
   pointer-events: all;
-}
-/*Center itt*/
+} */
 .wrapper {
   display: flex;
   justify-content: center; 
