--- a/public/index.css
+++ b/public/index.css
@@ -13,7 +13,11 @@
 body {
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
-  background-image: linear-gradient( 135deg, #2AFADF 10%, #4C83FF 100%);
+    font-size: medium;
+    background-image: linear-gradient( 135deg, #2AFADF 10%, #4C83FF 100%);
+}
+section{
+    overflow: auto;
 }
 
 header {
@@ -25,7 +29,6 @@ ul {
     padding: 0;
     margin: 0
 }
-
 li {
     list-style: none
 }
@@ -128,7 +131,7 @@ header nav ul li:hover a {
 }
 
 .page .act-table .act-table-cell {
-    font-size: 100px;
+    font-size: 20px;
     font-weight: 500;
     color: #fff
 }
