--- a/public/style.css
+++ b/public/style.css
@@ -37,7 +37,7 @@ footer {
   color: #fff;
   padding: 10px;
   text-align: center;
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
 }  
