artifacts complete,without info, pop up close btn bug with positioning

--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -1,34 +1,36 @@
-#artifacts{
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  position: relative;
-  font-family: "Montserrat", sans-serif;
-}
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 .wrapper {
-  display: inline-block;
+  display: inline;
   width: 90%;
   margin: 0 auto;
   max-width: 80rem;
+  justify-content:normal; 
+  align-items: normal; 
+  height: 100vh;
 }
 
 .cols {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
   display: inline;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center;
+  align-items: normal;
+  justify-content:normal;
+  max-width: 1200px; 
+  width: 100%;
 }
 
 .col {
   width: calc(25% - 2rem);
   margin: 1rem;
+  display: inline-block;
   cursor: pointer;
-
+  flex: 0 0 calc(33.333% - 20px);
+  margin: 10px;
+  perspective: 1000px;
 }
 
 .container {
@@ -278,69 +280,10 @@
   box-sizing: border-box;
 }
 
-.modal-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: fixed;
-  opacity: 0;
-  pointer-events: none;
-  top: 50%;
-  left: 50%;
-  border-radius: 10px;
-  z-index: 10;
-  background-color: rgba(0, 0, 0, 0.3);
-  width: 500px;
-  max-width: 80%;
-}
-.modal{
-  background-color: #fff;
-  width: 600px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  max-width: 100%;
-  padding: 30px 50px;
-  border-radius: 5px;
-
-}
-
-.modal-container.show {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.card_title{
-  color: hsl(201, 14%, 20%); 
-  font-size: 20px;
-  padding: 10px 14px 5px;
-  margin: 0;
-}
-.card_description{ 
-  margin: 0;
-  padding: 0 14px 10px; 
-  font-size: 14px;
-  color: hsl(201, 14%, 40%); 
-  text-align: left;
-}
-.card_gloss{
-  opacity: 0;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  border-radius: 50%;
-  position: absolute;
-  will-change: opacity;
-}
-.card_gloss.card_gloss-animatable{
-  transition: 0.25s opacity ease-out;
-}
 :root{
   font-family: inter;
   line-height: 1,5;
   font-weight: 400;
-  background-color: #98a7b0;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smooting: antialiased;
@@ -348,63 +291,14 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.card{
-  padding: 10px;
-  cursor: pointer;
-}
 
-.card_image{
-  aspect-ratio: 16/9;
-  width: 100%;
-  object-fit: cover;
-}
-.card_content{
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  background: whitesmoke;
-  border-radius: 10px;
-  box-shadow: 0 20px 25px -5px rgb(0 0 0 /0.1),0 8px 10px -5px rgb(0 0 0 /0.1);
-  width: 100%;
-  max-width: 300px;
-  will-change: transform;
-  transition: transform 0.25s ease-out;
-}
-
-
-/* #overlay {
-  position: fixed;
-  opacity: 0;
-  transition: 200ms ease-in-out;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, .5);
-  pointer-events: none;
-}
-
-#overlay.active {
-  opacity: 1;
-  pointer-events: all;
-} */
-@import url(https://fonts.googleapis.com/css?family=Roboto);
 html, body {
   font-family: 'Roboto', sans-serif;
   height: 100%;
 }
-body {
-    background: -webkit-linear-gradient(top, #ddd 0%, #f0f0f0 40%);
-    background: linear-gradient(to bottom, #ddd 0%, #f0f0f0 40%);
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-transform: perspective(800px);
-    transform: perspective(800px);
-   background:lightgoldenrodyellow;
-}
+
 .wrap {
-  position: absolute;
+  position: relative;
   perspective: 600px;
   height: 100%;
   width: 100%;
@@ -432,6 +326,39 @@ body {
 .card {
   background: #fff url('https://cdn.dribbble.com/users/1338391/screenshots/17547297/media/87cde54877f594d7e40ff90094adc782.jpg') 50% 50%;
   background-size: 450%;
+  margin: 10% auto;
+  padding: auto;
+  position: relative;
+  width: 40%;
+  height: 30%;
+}
+.manta{
+  display: block;
+  position: absolute;
+  transition: 200ms ease-in-out;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.manta.show{
+  opacity: 1;
+  pointer-events: all;
+  width: 100%;
+}
+.manta.hide{
+  opacity: 0;
+  pointer-events: none;
+}
+body.hide{
+  overflow: hidden;
+}
+#main.hide{
+  display: none;
 }
 .card-shine {
   position: absolute;
@@ -451,32 +378,23 @@ body {
   z-index: -1;
   transform: scale(.5,.5);
 }
-.card-front, .card-title, .card-subtitle {
+.card-title, .card-subtitle {
     position: absolute;
     color: #FFF;
     transform-style: preserve-3d;
 }
-.card-front {
-    border-radius: 10px;
-    width: 100%;
-    height: 100%;    
-    z-index:0;
-    background-color: rgba(0,0,0,.1);   
-}
-.card-title { 
+.card-title{ 
     font-weight: 700;
     text-align: left;
     left: 30px;
     bottom: 140px;
     font-size: 35px;
     line-height: 30px;
-    text-shadow: 0 5px 8px rgba(0,0,0,.65);
-    transform: translateZ(0px);
-    overflow: hidden;
+    text-shadow: 0 5px 8px rgba(255,255,255,.2);
     margin: 0;
     width: 80%;
 }
-.card-subtitle {    
+.card-subtitle{    
     font-weight: normal;
     text-align: left;
     left: 30px;
@@ -487,23 +405,52 @@ body {
     text-shadow: 0 3px 6px rgba(0,0,0,.8);
     transform: translateZ(0px);
 }
-.wrapper {
-  display: flex;
-  justify-content:baseline; 
-  align-items: center; 
-  height: 100vh; 
+/*close button*/
+.close-container{
+  position: relative;
+  margin: 0 auto;
+  width: 50px;
+  height: 50px;
+  margin-top: 100px;
+  float: inline-end;
+  pointer-events: fill;
+  display: block;
+  cursor: pointer;
+  opacity: 1;
 }
 
-.cols {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 1200px; 
-  width: 100%;
+.leftright{
+  height: 4px;
+  width: 50px;
+  position: absolute;
+  margin-top: 24px;
+  background-color: #F4A259;
+  border-radius: 2px;
+  transform: rotate(45deg);
+  transition: all .3s ease-in;
 }
 
-.col {
-  flex: 0 0 calc(33.333% - 20px);
-  margin: 10px;
-  perspective: 1000px;
+.rightleft{
+  height: 4px;
+  width: 50px;
+  position: absolute;
+  margin-top: 24px;
+  background-color: #F4A259;
+  border-radius: 2px;
+  transform: rotate(-45deg);
+  transition: all .3s ease-in;
+}
+
+.close{
+  margin: 60px 0 0 5px;
+  position: absolute;
+}
+
+.close-container:hover .leftright{
+  transform: rotate(-45deg);
+  background-color: #F25C66;
+}
+.close-container:hover .rightleft{
+  transform: rotate(45deg);
+  background-color: #F25C66;
 }
