--- a/public/style.css
+++ b/public/style.css
@@ -41,3 +41,316 @@ position: relative;
 bottom: 0;
 width: 100%;
 }  
+html,body {
+  min-height:100%;
+  max-height:100%;
+  margin:0;
+  padding:0;
+}
+
+*,*:before,*:after {
+  box-sizing:border-box;
+}
+
+body {
+  background-image:linear-gradient(202deg, #61BFD9 16%, #0551B4 67%);
+  font-family:"Helvetica Neue", "Arial", sans-serif;
+  .menu {
+    position:fixed;
+    height:100vh;
+    width:30vw;
+    top:0;
+    left:35vw;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    transition:transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+    transform:scale(0.6) translateY(30px);
+    color:white;
+    opacity:0;
+  }
+  .page-content-wrapper {
+    position:fixed;
+    z-index:2;
+    transition:transform 0.5s ease-in-out;
+    width:100%;
+    height:100%;
+    &:before,&:after {
+      content:'';
+      display:block;
+      position:fixed;
+      top:-10vh;
+      height:120vh;
+      width:60vw;
+      background:white;
+      z-index:0;
+      transition:transform .5s ease-in-out,box-shadow 0.5s ease-in-out;
+      box-shadow:0 0 0 black;
+    }
+    &:before {
+      left:-10vw;
+    }
+    &:after {
+      right:-10vw;
+    }
+    .page-content {
+      position:relative;
+      z-index:1;
+      transition:opacity 0.25s ease-in-out;
+      padding:20px 40px 80px 40px;
+      width:100%;
+      height:100%;
+      overflow:auto;
+      img {
+        width:30vw;
+        height:auto;
+        margin-top:20px;
+        margin-bottom:20px;
+        border-radius:5px;
+        box-shadow:0 10px 10px rgba(black,0.25);
+        &:nth-of-type(odd){
+          float:left;
+          margin-right:20px;
+        }
+        &:nth-of-type(even){
+          float:right;
+          margin-left:20px;
+        }
+      }
+    }
+  }
+  #menu-toggle, #menu-toggle + label {
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:3;
+    display:block;
+    height:40px;
+    width:40px;
+  }
+  #menu-toggle {
+    opacity:0;
+  }
+  #menu-toggle + label {
+    transition:transform 0.5s ease-in-out;
+  }
+  #menu-toggle + label .fas {
+    font-weight:100;
+    font-size:35px;
+    position:absolute;
+    display:flex;
+    height:40px;
+    width:40px;
+    align-items:center;
+    justify-content:center;
+    top:0;
+    left:0;
+    transition:opacity 0.5s ease-in-out;
+    
+    &.fa-times {
+      opacity:0;
+    }
+  }
+  .jefflink {
+    position:fixed;
+    z-index:5;
+    bottom:10px;
+    left:50%;
+    padding:20px;
+    background-image:linear-gradient(202deg, #61BFD9 16%, #0551B4 67%);
+    border-radius:10px;
+    width:220px;
+    text-align:center;
+    margin-left:-110px;
+    text-decoration:none;
+    color:white;
+    text-shadow:0 2px 2px #0551B4;
+    transition:transform 0.5s ease-in-out;
+    &:hover {
+      background-image:linear-gradient(202deg, darken(#61BFD9,10) 16%, darken(#0551B4,10) 67%);
+       text-shadow:0 2px 2px darken(#0551B4,10);
+    }
+  }
+  #menu-toggle:checked {
+    + label {
+      transform:rotate(180deg);
+      .fas {
+        &.fa-times {
+          opacity:1;
+        }
+        &.fa-bars {
+          opacity:0;
+        }
+      }
+    }
+    ~ .page-content-wrapper {
+      pointer-events:none;
+      transform:scale(1.5);
+      &:before,&:after {
+        box-shadow:0 0 10px black;
+      }
+      &:before {
+        transform:translateX(-15vw);
+      }
+      &:after {
+        transform:translateX(15vw);
+      }
+      .page-content {
+        opacity:0;
+      }
+    }
+    ~ .menu {
+      transform:scale(1) translateY(0px);
+      opacity:1;
+    }
+    ~ .jefflink {
+      transform:translateY(200px)
+    }
+  }
+}
+/*split items*/
+:root {
+	--bgcolor: rgb(2, 0, 36);
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+}
+
+body {
+	min-height: 100vh;
+	display: grid;
+	place-items: center;
+	background: var(--bgcolor);
+	color: white;
+}
+ul {
+	list-style: none;
+}
+
+
+@import url("https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Cairo', sans-serif;}
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  overflow: hidden;
+  background: #dcd9cd;
+}
+ul {
+  position: relative;
+}
+ul li {
+  list-style: none;
+  text-align: center;
+}
+ul li h1 {
+  color: #333;
+  text-decoration: none;
+  font-size: 3em;
+  padding: 5px 20px;
+  display: inline-flex;
+  font-weight: 700;
+  transition: 0.5s;
+}
+ul:hover li h1 {
+  color: #0002;
+}
+ul li:hover h1 {
+  color: #000;
+  background: transparent;
+}
+/**problema mai idva ot tuk*/
+ul li h1:before {
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5em;
+  color: rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  z-index: -1;
+  opacity: 0;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 500px;
+  transition: letter-spacing 0.5s, left 0.5s;
+}
+ul li h1:hover:before {
+  content: attr(data-text);
+  opacity: 1;
+  left: 50%;
+  letter-spacing: 10px;
+  width: 1800px;
+  height: 1800px;
+}
+ul li:nth-child(6n + 1) h1:before {
+  background: #0470fe;
+}
+ul li:nth-child(6n + 2) h1:before {
+  background: #ff7675;
+}
+ul li:nth-child(6n + 3) h1:before {
+  background: #1582fe;
+}
+ul li:nth-child(6n + 4) h1:before {
+  background: #a29bfe;
+}
+ul li:nth-child(6n + 5) h1:before {
+  background: #fd79a8;
+}
+ul li:nth-child(6n + 6) h1:before {
+  background: #ffeaa7;
+}
+h1 {
+	font-size: 5rem;
+	position: relative;
+	text-transform: uppercase;
+	transition: all 300ms ease;
+	width: fit-content;
+	cursor: pointer;
+}
+h1:hover {
+	transform: skew(10deg);
+}
+h1::before {
+	content: attr(data-name);
+	position: absolute;
+	top: 0;
+	left: -20px;
+	background: var(--bgcolor);
+	height: 3rem;
+	overflow: hidden;
+	transition: all 300ms ease;
+	padding-left: 20px;
+}
+h1:hover::before {
+	top: -3px;
+	left: 0px;
+	color: hotpink;
+}
+
+h1::after {
+	content: "";
+	height: 4px;
+	width: 0;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: hotpink;
+	transition: all 300ms ease;
+}
+h1:hover::after {
+	width: 120%;
+	outline: 5px solid rgb(2, 0, 36);
+}
