--- a/public/style.css
+++ b/public/style.css
@@ -55,7 +55,7 @@ html,body {
 body {
   background-image:linear-gradient(202deg, #61BFD9 16%, #0551B4 67%);
   font-family:"Helvetica Neue", "Arial", sans-serif;
-  .menu {
+  .menu-items {
     position:fixed;
     height:100vh;
     width:30vw;
@@ -67,7 +67,7 @@ body {
     transition:transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
     transform:scale(0.6) translateY(30px);
     color:white;
-    opacity:0;
+    opacity: 0;
   }
   .page-content-wrapper {
     position:fixed;
@@ -119,12 +119,13 @@ body {
       }
     }
   }
-  #menu-toggle, #menu-toggle + label {
-    position:fixed;
-    top:0;
-    left:0;
-    z-index:3;
-    display:block;
+
+    #menu-toggle, #menu-toggle + label {
+      position:fixed;
+      top:0;
+      left:0;
+      z-index:3;
+      display:block;
     height:40px;
     width:40px;
   }
@@ -151,27 +152,7 @@ body {
       opacity:0;
     }
   }
-  .jefflink {
-    position:fixed;
-    z-index:5;
-    bottom:10px;
-    left:50%;
-    padding:20px;
-    background-image:linear-gradient(202deg, #61BFD9 16%, #0551B4 67%);
-    border-radius:10px;
-    width:220px;
-    text-align:center;
-    margin-left:-110px;
-    text-decoration:none;
-    color:white;
-    text-shadow:0 2px 2px #0551B4;
-    transition:transform 0.5s ease-in-out;
-    &:hover {
-      background-image:linear-gradient(202deg, darken(#61BFD9,10) 16%, darken(#0551B4,10) 67%);
-       text-shadow:0 2px 2px darken(#0551B4,10);
-    }
-  }
-  #menu-toggle:checked {
+  #menu-toggle.effect {
     + label {
       transform:rotate(180deg);
       .fas {
@@ -183,6 +164,7 @@ body {
         }
       }
     }
+  
     ~ .page-content-wrapper {
       pointer-events:none;
       transform:scale(1.5);
@@ -199,37 +181,12 @@ body {
         opacity:0;
       }
     }
-    ~ .menu {
+    ~ .menu-items {
       transform:scale(1) translateY(0px);
       opacity:1;
     }
-    ~ .jefflink {
-      transform:translateY(200px)
-    }
   }
 }
-/*split items*/
-:root {
-	--bgcolor: rgb(2, 0, 36);
-}
-
-* {
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
-}
-
-body {
-	min-height: 100vh;
-	display: grid;
-	place-items: center;
-	background: var(--bgcolor);
-	color: white;
-}
-ul {
-	list-style: none;
-}
-
 
 @import url("https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300&display=swap");
 
@@ -253,7 +210,7 @@ ul li {
   list-style: none;
   text-align: center;
 }
-ul li h1 {
+ul li a {
   color: #333;
   text-decoration: none;
   font-size: 3em;
@@ -262,15 +219,18 @@ ul li h1 {
   font-weight: 700;
   transition: 0.5s;
 }
-ul:hover li h1 {
+ul:hover li a {
   color: #0002;
 }
-ul li:hover h1 {
+ul li:hover a {
   color: #000;
   background: transparent;
 }
-/**problema mai idva ot tuk*/
-ul li h1:before {
+ul li a:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 40%;
   transform: translate(-50%, -50%);
   display: flex;
   justify-content: center;
@@ -285,7 +245,7 @@ ul li h1:before {
   letter-spacing: 500px;
   transition: letter-spacing 0.5s, left 0.5s;
 }
-ul li h1:hover:before {
+ul li a:hover:before {
   content: attr(data-text);
   opacity: 1;
   left: 50%;
@@ -293,64 +253,110 @@ ul li h1:hover:before {
   width: 1800px;
   height: 1800px;
 }
-ul li:nth-child(6n + 1) h1:before {
+ul li:nth-child(6n + 1) a:before {
   background: #0470fe;
 }
-ul li:nth-child(6n + 2) h1:before {
+ul li:nth-child(6n + 2) a:before {
   background: #ff7675;
 }
-ul li:nth-child(6n + 3) h1:before {
+ul li:nth-child(6n + 3) a:before {
   background: #1582fe;
 }
-ul li:nth-child(6n + 4) h1:before {
+ul li:nth-child(6n + 4) a:before {
   background: #a29bfe;
 }
-ul li:nth-child(6n + 5) h1:before {
+ul li:nth-child(6n + 5) a:before {
   background: #fd79a8;
 }
-ul li:nth-child(6n + 6) h1:before {
+ul li:nth-child(6n + 6) a:before {
   background: #ffeaa7;
 }
-h1 {
-	font-size: 5rem;
-	position: relative;
-	text-transform: uppercase;
-	transition: all 300ms ease;
-	width: fit-content;
-	cursor: pointer;
+.menu {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  padding: 0;
 }
-h1:hover {
-	transform: skew(10deg);
+.line {
+  fill: none;
+  stroke: black;
+  stroke-width: 6;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-h1::before {
-	content: attr(data-name);
-	position: absolute;
-	top: 0;
-	left: -20px;
-	background: var(--bgcolor);
-	height: 3rem;
-	overflow: hidden;
-	transition: all 300ms ease;
-	padding-left: 20px;
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
 }
-h1:hover::before {
-	top: -3px;
-	left: 0px;
-	color: hotpink;
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
 }
-
-h1::after {
-	content: "";
-	height: 4px;
-	width: 0;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background: hotpink;
-	transition: all 300ms ease;
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
 }
-h1:hover::after {
-	width: 120%;
-	outline: 5px solid rgb(2, 0, 36);
+.opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+body {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
+.menu {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  padding: 0;
+}
+.line {
+  fill: none;
+  stroke: black;
+  stroke-width: 6;
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+.opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
 }
