--- a/public/timeline.css
+++ b/public/timeline.css
@@ -73,7 +73,9 @@ img {
   background-clip: text;
   -webkit-text-fill-color: transparent;
   color: transparent;
-
+  position: absolute;
+  top: 2cm;
+  left: 30%;
   font-size: 80px;
 }
 
