--- a/public/artifacts.css
+++ b/public/artifacts.css
@@ -422,7 +422,7 @@ body.hide{
   cursor: pointer;
   opacity: 1;*/
   position: absolute;
-  top: 0; 
+  top: 1cm; 
   right: 0; 
   transform: translateX(-50%); 
   width: 50px;
