--- a/public/contact.css
+++ b/public/contact.css
@@ -61,7 +61,6 @@ footer{
     }
 }
 
-@use postcss-nested;
 
 @import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
 * {
@@ -118,7 +117,6 @@ textarea:focus {
   outline: none;
 }
 .wrapper {
-  width: 35rem;
   background-color: white;
 }
 .letter {
@@ -126,7 +124,8 @@ textarea:focus {
   left: 0;
   right: 0;
   top: 0;
-  width: 30rem;
+  width: 75%;/*30rem*/
+  max-width: 30rem;
   margin: auto;
   perspective: 60rem;
 }
@@ -154,8 +153,8 @@ textarea:focus {
   margin: auto;
 }
 .envelope.front {
-  width: 10rem;
-  height: 6rem;
+  width: 40vw;
+  height: 40vh;
   border-radius: 0 0 1rem 1rem;
   overflow: hidden;
   z-index: 9999;
@@ -164,8 +163,8 @@ textarea:focus {
 .envelope.front::before, .envelope.front::after {
   position: absolute;
   display: block;
-  width: 12rem;
-  height: 6rem;
+   width: 10vw;
+  height: 40vh; 
   background-color: #e9dc9d;
   transform: rotate(30deg);
   transform-origin: 0 0;
@@ -179,16 +178,16 @@ textarea:focus {
 }
 .envelope.back {
   top: -4rem;
-  width: 10rem;
-  height: 10rem;
+  width: 40vw;
+  height: 40vh;
   overflow: hidden;
   z-index: -9998;
   opacity: 0;
   transform: translateY(-6rem);
   &::before {
     display: block;
-    width: 10rem;
-    height: 10rem;
+    width: 100%;
+    height: 100%;
     background-color: #e9dc9d;
     border-radius: 1rem;
     content: '';
